--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -28,6 +28,7 @@ a {
 
 .wrapper {
   margin: 0 auto;
+  width: 95%;
   max-width: 65rem;
 }
 
@@ -35,12 +36,42 @@ a {
   padding-top: 2rem;
 }
 
+.p-1 {
+  padding: 1rem;
+}
+
+.p-1\/2 {
+  padding: 0.5rem;
+}
+
+.px-2 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-1\/2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .mt-1 {
   margin-top: 1rem;
 }
 
+.mt-1\/2 {
+  margin-top: 0.5rem;
+}
+
 .mt-2 {
   margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.ml-1 {
+  margin-left: 1rem;
 }
 
 .text-bold {
