--- a/src/components/Battle/Battle.styles.css
+++ b/src/components/Battle/Battle.styles.css
@@ -1,39 +1,136 @@
+button {
+  border: none;
+  cursor: pointer;
+  background-color: rgb(36, 36, 36);
+  color: rgb(224, 224, 224);
+}
+
+button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(0, 122, 163, 0.5);
+}
+
+button:disabled {
+  background-color: rgb(230, 230, 230);
+  color: rgb(105, 105, 105);
+}
+
 .instructions {
-    display: flex;
-    gap: 32px;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  gap: 32px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .instructions__header {
-    font-size: 40px;
-    font-weight: normal;
+  font-size: 40px;
+  font-weight: normal;
 }
 
 .instructions__list {
-    display: flex;
-    gap: 32px;
-    width: 80%;
-    list-style: none;
+  display: flex;
+  gap: 32px;
+  width: 80%;
+  list-style: none;
 }
 
 .instruction-item {
-    display: flex;
-    flex: 1;
-    gap: 16px;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .instruction-item__header {
-    font-size: 28px;
-    font-weight: normal;
+  font-size: 28px;
+  font-weight: normal;
 }
 
 .instruction-item__icon {
-    background-color: #ebebeb;
-    padding: 32px;
-    border-radius: 5px;
-    width: 200px;
-    height: 200px;
+  background-color: #ebebeb;
+  padding: 32px;
+  border-radius: 5px;
+  width: 200px;
+  height: 200px;
+}
+
+.players-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.players-section__header {
+  align-self: center;
+  font-size: 28px;
+  font-weight: normal;
+}
+
+.players-section__forms {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 80px;
+}
+
+.selectable-player {
+  flex: 1 1 300px;
+}
+
+.player-form {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.player-form__input {
+  display: block;
+  flex: 1;
+
+  background: #fff;
+  color: #525865;
+  border-radius: 4px;
+  border: 1px solid #d1d1d1;
+  box-shadow: inset 0px 1px 8px rgba(0, 0, 0, 0.2);
+  font-size: 1em;
+  outline: none;
+  padding: 0.3em 0.5225em 0.35em;
+  transition: 0.18s ease-out;
+}
+
+.player-form__input:hover {
+  box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.02);
+}
+
+.player-form__input:focus {
+  color: #4b515d;
+  border: 1px solid #b8b6b6;
+  box-shadow: inset 1px 2px 4px rgba(0, 0, 0, 0.01),
+    0px 0px 8px rgba(0, 0, 0, 0.2);
+}
+
+.player-form__btn {
+  align-self: stretch;
+}
+
+.player-profile {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  background-color: #ebebeb;
+}
+
+.player-profile__avatar {
+  border-radius: 50%;
+  width: 50px;
+}
+
+.player-profile__remove-btn {
+  margin-left: auto;
+  background-color: inherit;
+  color: rgb(211, 65, 65);
+  font-size: 24px;
+}
+
+.players-section__battle-btn {
+  align-self: center;
 }
